--- a/client/app/views/restaurants.html
+++ b/client/app/views/restaurants.html
@@ -1,5 +1,5 @@
 <h1>Restaurants</h1>
  
 <ul ng-repeat="restaurant in restaurants">
-    <li>{{restaurant.name}}</li>
+    <li>{{restaurant.name}} <small>{{restaurant.lunch}}</small></li>
 </ul>
