--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -25,17 +25,15 @@ a:hover {
 //
 // Base structure
 //
+@base-background-color: #70001C;
 
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: @base-background-color;
 }
 body {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+  color: #ccc;
 }
 
 // Extra markup and styles for table-esque vertical and horizontal centering
@@ -49,10 +47,6 @@ body {
   display: table-cell;
   vertical-align: top;
 }
-.cover-container {
-  margin-left: auto;
-  margin-right: auto;
-}
 
 // Padding for spacing
 .inner {
@@ -63,6 +57,9 @@ body {
 //
 // Header
 //
+.masthead {
+  background-color: rgba(255,255,255,.125);
+}
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -106,17 +103,20 @@ body {
 
 
 //
-// Cover
+// Content
 //
 
-.cover {
-  padding: 0 20px;
-}
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
+.content {
+  padding-top: 50px;
 }
 
+.panel {
+  background: none;
+}
+.panel-default > .panel-heading {
+  background-color: darken(@base-background-color, 5%);
+  color: #eee;
+}
 
 //
 // Footer
@@ -151,13 +151,5 @@ body {
   .mastfoot,
   .cover-container {
     width: 100%; // Must be percentage or pixels for horizontal alignment
-  }
-}
-
-@media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 700px;
   }
 }
