--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -132,6 +132,13 @@ body {
   }
 }
 
+.built {
+  font-size: 90%;
+  position: relative;
+  top: -5px;
+  left: -5px;
+}
+
 
 //
 // Affix and center
