--- a/client/app/views/partials/footer.html
+++ b/client/app/views/partials/footer.html
@@ -1,2 +1,6 @@
-<div><a href="https://twitter.com/share" class="twitter-share-button" data-text="Just found a good lunch spot in Vienna" data-via="davkals">Tweet</a></div>
+<div class="pull-right">
+	<span class="built">Built by David Kaltschmidt</span>
+	<a href="https://twitter.com/davkals" class="twitter-follow-button" data-show-count="false">@davkals</a> 
+	<a href="https://twitter.com/share" class="twitter-share-button" data-text="Just found a good lunch spot in Vienna" data-via="davkals">Tweet</a>
+</div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
