--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -1,4 +1,5 @@
 @import (reference) "../bower_components/bootstrap/less/bootstrap";
+@import url(http://fonts.googleapis.com/css?family=Vollkorn);
 
 //
 // Globals
@@ -25,15 +26,17 @@ a:hover {
 //
 // Base structure
 //
-@base-background-color: #70001C;
 
 html,
 body {
   height: 100%;
-  background-color: @base-background-color;
+  background-image: url(../images/paper.png);
 }
 body {
-  color: #ccc;
+  color: #666;
+  font-family: 'Vollkorn', serif;
+  text-shadow:0 1px 2px rgba(255,255,255,0.8);
+  box-shadow:0 1px 2px rgba(255,255,255,0.8);
 }
 
 // Extra markup and styles for table-esque vertical and horizontal centering
@@ -58,13 +61,12 @@ body {
 // Header
 //
 .masthead {
-  background-color: lighten(@base-background-color, 5%);
-  z-index: 100;
-  border-bottom: thin solid white;
 }
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
+  color: #5c0120;
+  font-size: 400%;
 }
 
 .masthead-nav > li {
@@ -109,15 +111,12 @@ body {
 //
 
 .content {
-  padding-top: 80px;
 }
 
-.panel {
-  background: none;
-}
-.panel-default > .panel-heading {
-  background-color: darken(@base-background-color, 5%);
-  color: #eee;
+.restaurant {
+  border-top: thin solid #aaa;
+  margin-top: 30px;
+  padding: 0 15px;
 }
 
 //
@@ -126,7 +125,6 @@ body {
 
 .mastfoot {
   color: #999; // IE8 proofing
-  background-color: darken(@base-background-color, 5%);
   .inner {
     padding: 10px 30px;
   }
@@ -146,14 +144,6 @@ body {
 
 @media (min-width: 768px) {
   // Pull out the header and footer
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
   // Start the vertical centering
   .site-wrapper-inner {
     vertical-align: middle;
