--- a/client/app/views/partials/footer.html
+++ b/client/app/views/partials/footer.html
@@ -3,4 +3,25 @@
 	<a href="https://twitter.com/davkals" class="twitter-follow-button" data-show-count="false">@davkals</a> 
 	<a href="https://twitter.com/share" class="twitter-share-button" data-text="Just found a good lunch spot in Vienna" data-via="davkals">Tweet</a>
 </div>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+<script>
+if (document.location.hostname.indexOf("viennalunch.com") !== -1) {
+
+	// Twitter
+
+	!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
+		if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}
+	}(document, 'script', 'twitter-wjs');
+
+	// Google analytics
+
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-55397765-1', 'auto');
+	ga('send', 'pageview');
+
+}
+</script>
