--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -4,12 +4,13 @@
 //
 // Globals
 //
+@primary-red: #5c0120;
 
 // Links
 a,
 a:focus,
 a:hover {
-  color: #fff;
+  color: @primary-red;
 }
 
 // Custom default button
@@ -65,7 +66,7 @@ body {
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
-  color: #5c0120;
+  color: @primary-red;
   font-size: 400%;
 }
 
