--- a/client/app/views/restaurants.html
+++ b/client/app/views/restaurants.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-md-4 col-sm-6" ng-repeat="restaurant in restaurants">
+	<div class="col-lg-3 col-md-4 col-sm-6" ng-repeat="restaurant in restaurants">
 		<div class="restaurant">
 		  <div class="restaurant-heading">
 		    <h3 class="restaurant-title">{{restaurant.name}}</h3>
