--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -64,10 +64,20 @@ body {
 .masthead {
 }
 .masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 0px;
   color: @primary-red;
   font-size: 400%;
+
+  .arabesque-left {
+    margin-bottom: 10px;
+    margin-right: 60px;
+  }
+  .arabesque-right {
+    margin-bottom: 10px;
+    margin-left: 60px;
+  }
 }
 
 .masthead-nav > li {
@@ -95,15 +105,6 @@ body {
 .masthead-nav > .active > a:focus {
   color: #fff;
   border-bottom-color: #fff;
-}
-
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
 }
 
 
