caption for title

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -62,6 +62,9 @@ body {
 // Header
 //
 .masthead {
+  .caption {
+    text-align: center;
+  }
 }
 .masthead-brand {
   text-align: center;
@@ -71,11 +74,11 @@ body {
   font-size: 400%;
 
   .arabesque-left {
-    margin-bottom: 10px;
+    margin-top: 10px;
     margin-right: 60px;
   }
   .arabesque-right {
-    margin-bottom: 10px;
+    margin-top: 10px;
     margin-left: 60px;
   }
 }
