--- a/client/app/views/partials/footer.html
+++ b/client/app/views/partials/footer.html
@@ -1,5 +1,5 @@
 <div class="pull-right">
-	<span class="built">Built by David Kaltschmidt</span>
+	<span class="built">Built by David Kaltschmidt. To add more restaurants, go to <a href="https://github.com/davkal/vienna-lunch" target="github">GitHub</a>.</span>
 	<a href="https://twitter.com/davkals" class="twitter-follow-button" data-show-count="false">@davkals</a> 
 	<a href="https://twitter.com/share" class="twitter-share-button" data-text="Just found a good lunch spot in Vienna" data-via="davkals">Tweet</a>
 </div>
