show restaurants on google map

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -119,9 +119,28 @@ body {
 }
 
 .restaurant {
-  border-top: thin solid #aaa;
-  margin-top: 30px;
+  margin-bottom: 45px;
   padding: 0 15px;
+}
+
+.map-canvas {
+  border: thin solid #aaa;
+  height: 720px;
+  margin-top: 45px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.restaurant-info {
+  max-width: 200px;
+}
+
+.address {
+  text-transform: uppercase;
+  color: #aaa;
+  font-size: 85%;
+  position: relative;
+  top: -5px;
 }
 
 //
