sort restaurants by zip code

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -119,7 +119,7 @@ body {
 }
 
 .restaurant {
-  margin-bottom: 45px;
+  margin-bottom: 30px;
   padding: 0 15px;
 }
 
@@ -141,6 +141,11 @@ body {
   font-size: 85%;
   position: relative;
   top: -5px;
+}
+
+.zip {
+  padding: 15px 15px 0 15px;
+  color: @primary-red;
 }
 
 //
