--- a/client/app/views/restaurants.html
+++ b/client/app/views/restaurants.html
@@ -1,26 +1,34 @@
 
 <div class="row">
-	<div class="col-md-3" >
-		<div class="restaurant" ng-repeat="restaurant in restaurants1" ng-mouseover="onMouseOver()" ng-mouseout="onMouseOut()">
-		  <div class="restaurant-heading">
-		    <h4 class="restaurant-title">{{restaurant.name}}</h4>
-		    <div class="address">{{restaurant.address}}</div>
-		  </div>
-		  <div class="restaurant-body" ng-bind-html="restaurant.lunch">
-		  </div>
+	<div class="col-md-3">
+		<div class="district" ng-repeat="district in leftDistricts">
+			<div class="zip">{{district.zip}}</div>
+			<div class="restaurant" ng-repeat="restaurant in district.restaurants"
+				ng-mouseenter="onMouseOver()" ng-mouseleave="onMouseOut()">
+			  <div class="restaurant-heading">
+			    <h4 class="restaurant-title">{{restaurant.name}}</h4>
+			    <div class="address">{{restaurant.address}}</div>
+			  </div>
+			  <div class="restaurant-body" ng-bind-html="restaurant.lunch">
+			  </div>
+			</div>
 		</div>
 	</div>
 	<div class="col-md-6 hidden-xs">
 		<div ui-map="restaurantMap" ui-options="mapOptions" class="map-canvas"></div>
 	</div>
 	<div class="col-md-3" >
-		<div class="restaurant" ng-repeat="restaurant in restaurants2" ng-mouseover="onMouseOver()" ng-mouseout="onMouseOut()">
-		  <div class="restaurant-heading">
-		    <h4 class="restaurant-title">{{restaurant.name}}</h4>
-		    <div class="address">{{restaurant.address}}</div>
-		  </div>
-		  <div class="restaurant-body" ng-bind-html="restaurant.lunch">
-		  </div>
+		<div class="district" ng-repeat="district in rightDistricts">
+			<div class="zip">{{district.zip}}</div>
+			<div class="restaurant" ng-repeat="restaurant in district.restaurants"
+				ng-mouseenter="onMouseOver()" ng-mouseleave="onMouseOut()">
+			  <div class="restaurant-heading">
+			    <h4 class="restaurant-title">{{restaurant.name}}</h4>
+			    <div class="address">{{restaurant.address}}</div>
+			  </div>
+			  <div class="restaurant-body" ng-bind-html="restaurant.lunch">
+			  </div>
+			</div>
 		</div>
 	</div>
 </div>
