--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -5,6 +5,8 @@
 // Globals
 //
 @primary-red: #5c0120;
+@text-color: #666;
+@text-secondary-color: #aaa;
 
 // Links
 a,
@@ -34,7 +36,7 @@ body {
   background-image: url(../images/paper.png);
 }
 body {
-  color: #666;
+  color: @text-color;
   font-family: 'Vollkorn', serif;
   text-shadow:0 1px 2px rgba(255,255,255,0.8);
   box-shadow:0 1px 2px rgba(255,255,255,0.8);
@@ -121,6 +123,15 @@ body {
 .restaurant {
   margin-bottom: 30px;
   padding: 0 15px;
+
+  a {
+    color: @text-secondary-color;
+    margin-left: 1em;
+    
+    &:hover {
+      color: @primary-red;
+    }
+  }
 }
 
 .map-canvas {
@@ -137,7 +148,7 @@ body {
 
 .address {
   text-transform: uppercase;
-  color: #aaa;
+  color: @text-secondary-color;
   font-size: 85%;
   position: relative;
   top: -5px;
