secondary color a bit darker

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -6,7 +6,7 @@
 //
 @primary-red: #5c0120;
 @text-color: #666;
-@text-secondary-color: #aaa;
+@text-secondary-color: #999;
 
 // Links
 a,
@@ -127,7 +127,7 @@ body {
   a {
     color: @text-secondary-color;
     margin-left: 1em;
-    
+
     &:hover {
       color: @primary-red;
     }
