--- a/client/app/views/restaurants.html
+++ b/client/app/views/restaurants.html
@@ -14,6 +14,7 @@
 			  </div>
 			  <div class="restaurant-body" ng-bind-html="restaurant.lunch">
 			  </div>
+			  <div class="restaurant-nolunch" ng-if="restaurant.notfound">(no lunch found)</div>
 			</div>
 		</div>
 	</div>
@@ -34,6 +35,7 @@
 			  </div>
 			  <div class="restaurant-body" ng-bind-html="restaurant.lunch">
 			  </div>
+			  <div class="restaurant-nolunch" ng-if="restaurant.notfound">(no lunch found)</div>
 			</div>
 		</div>
 	</div>
