show loading text

--- a/client/app/views/restaurants.html
+++ b/client/app/views/restaurants.html
@@ -1,4 +1,6 @@
-
+<div class="loading" ng-hide="restaurantCount">
+    <em>Reading menus...</em>
+</div>
 <div class="row">
 	<div class="col-md-3">
 		<div class="district" ng-repeat="district in leftDistricts">
